Fixed layout problem with play page.

--- a/app/assets/stylesheets/_layout.css.scss
+++ b/app/assets/stylesheets/_layout.css.scss
@@ -1127,5 +1127,7 @@ footer {
   margin-left: 18%;
 }
 
-
+.games {
+  margin-left: 120px;
+}
 
